# SnackTrack-Backend

./: .gitignore  LICENSE  README.md  activity-diagram.drawio  pyproject.toml
data/nutrition5k_dataset_nosides/processed/: dishes_info.csv  ingredients_metadata.csv
notebooks/: data.ipynb  mlb.pkl  preprocess.ipynb  test.csv  test2.csv  training-old.ipynb  training.ipynb
notebooks/old/: training.ipynb
src/datasets/: ingredient_dataset.py  test.ipynb
src/models/: ResNetRegression.py
src/scripts/: train_weight_predictor.py
