[tool.poetry]
name = "snack-track-backend"
version = "0.1.0"
description = ""
authors = ["Max Burzer <maxi.burzer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.1"
pandas = "^2.2.1"
opencv-python = "^4.9.0.80"
scikit-learn = "^1.4.1.post1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
